tests/errors/sem.kt
fun main(args: Array<String>) {
    val a: Int = "string"
}